feat: chat app
